# PixelArk

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: Gallery.rs  cache.rs  lib.rs  main.rs  media_io.rs
src/app/: AppSideBar.tsx  Home.tsx  constants.ts
src/app/gallery/: FolderBreadcrumb.tsx  Gallery.tsx  GalleryContext.tsx  GalleryElement.tsx  GalleryElementsView.tsx  GalleryFolder.tsx  GalleryFoldersView.tsx  GalleryHeader.tsx  GalleryPanel.tsx  types.ts
src/app/gallery/context/: GalleryContext.ts  GalleryProvider.tsx
src/app/gallery/elements/: GalleryElement.tsx  GalleryFolder.tsx
src/app/gallery/galleryContext/: GalleryContext.ts  GalleryProvider.tsx  useGallery.ts
src/app/gallery/mediaViewer/: MediaViewerPanel.tsx
src/app/gallery/mediaViewer/mediaViewerContext/: MediaViewerContext.ts  MediaViewerProvider.tsx  useMediaViewer.ts
src/app/gallery/views/: GridView.tsx  MasonryView.tsx
src/components/: OverflowTooltip.tsx  theme-toggle-button.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  context-menu.tsx  dialog.tsx  form.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  tabs.tsx
