[package]
name = "PixelArk"
version = "0.1.0"
description = "A Tauri Home"
authors = ["SkyNalix"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pixelark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
debug = true

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["protocol-asset"] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
natord = "1.0.9"
image = "0.25.6"
tauri-plugin-log = "2.4.0"
log = "0.4.27"
chrono = "0.4.40"
turbojpeg = "1.3.3"
